fix: do not clip absolute element and enhance scrollbar visibility (#4330)
* fix: do not clip absolute element and enhance scrollbar visibility

* fix: adjust class order for button and chat footer for consistency

---------

--- a/ui/user/src/app.css
+++ b/ui/user/src/app.css
@@ -933,3 +933,8 @@ html {
 	--surface3: var(--color-gray-200);
 	--on-surface3: var(--color-black);
 }
+
+.scrollable {
+	scrollbar-color: var(--color-surface3) #f1f1f100;
+	scrollbar-width: auto;
+}
